--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 :root{
-    --background: #62117d; /*your strangest colour with bad contrast as text*/
-    --main: #FC4781; /*this is behind your divs, it can be anything too*/
-    --highlight: #FCCA47; /*this is you underlines, borders, etc. it can be funky too*/
-    --text: #495578; /*main body text, links, etc. needs good contrast with neutral or dark (depending on your theme)*/
-    --titles: #4776FC; /*good contrast with neutral or dark, used for all your headings*/
-    --neutral: #ffeef3; /*often light, is the div colour*/
-    --dark: #461927; /*a contrast to neutral, like the dark version of it, for things like hover or dark mode*/
+    --background: #1174ED; /*your strangest colour with bad contrast as text*/
+    --main: #176B0C; /*this is behind your divs, it can be anything too*/
+    --highlight: #92EB78; /*this is you underlines, borders, etc. it can be funky too*/
+    --text: #002D38; /*main body text, links, etc. needs good contrast with neutral or dark (depending on your theme)*/
+    --titles: #26966B; /*good contrast with neutral or dark, used for all your headings*/
+    --light: #F0FEF2; /*often light, is the div colour*/
+    --dark: #002D38; /*a contrast to light, like the dark version of it, for things like hover or dark mode*/
 }
 *{
     margin:0;
@@ -31,7 +31,7 @@ div{
   margin: 20px;
     color: var(--text);
     clear:both;
-    background-color: var(--neutral);
+    background-color: var(--light);
 }
 .list{
     margin-left: 20px;
@@ -88,7 +88,7 @@ nav ul li{
 	float: left;
 	list-style: none;
 	position: relative;
-	border: solid var(--neutral) 5px;
+	border: solid var(--light) 5px;
 	height: 50px;
 }
 nav ul li a{
@@ -104,7 +104,7 @@ nav ul li:hover{
 }
 nav ul li a:hover{
 	background-color: var(--dark);
-	color: var(--neutral);
+	color: var(--light);
 }
 nav ul li ul{
 	display: none;
@@ -117,7 +117,7 @@ nav ul li:hover ul{
 }
 nav ul li ul li{
 	width: 220px;
-	border: solid var(--neutral);
+	border: solid var(--light);
 	height: auto;
 }
 nav ul li ul li a{
@@ -125,7 +125,7 @@ nav ul li ul li a{
 }
 nav ul li ul li a:hover{
 	background-color: var(--dark);
-	color: var(--neutral);
+	color: var(--light);
 }
 nav ul li ul li:hover{
 	border-color: var(--highlight);
